// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Issue component should render correctly 1`] = `
.emotion-0 {
  margin: 0 0 16px;
  padding-bottom: 24px;
  border-bottom: 1px solid #29488510;
  max-width: 600px;
}

.emotion-1 {
  color: #294885;
  margin: 0 0 12px;
  font-family: themix;
}

.emotion-2 {
  margin: 0 0 0.6em;
}

.emotion-2 * {
  font-size: 0.8rem;
}

.emotion-3 {
  margin: 0 0 16px;
}

.emotion-3 img {
  max-width: 100%;
}

.emotion-4 {
  background-color: #894cc033;
  color: #444;
  font-family: themix;
  font-size: 0.8rem;
  margin-right: 8px;
  padding: 0.2rem 0.4rem;
  border-radius: 4px;
}

.emotion-5 {
  background-color: #6d52b833;
  color: #444;
  font-family: themix;
  font-size: 0.8rem;
  margin-right: 8px;
  padding: 0.2rem 0.4rem;
  border-radius: 4px;
}

.emotion-6 {
  background-color: #8b843b33;
  color: #444;
  font-family: themix;
  font-size: 0.8rem;
  margin-right: 8px;
  padding: 0.2rem 0.4rem;
  border-radius: 4px;
}

.emotion-7 {
  background-color: #d293ff33;
  color: #444;
  font-family: themix;
  font-size: 0.8rem;
  margin-right: 8px;
  padding: 0.2rem 0.4rem;
  border-radius: 4px;
}

<article
  class="emotion-0"
>
  <h2
    class="emotion-1"
  >
    <a
      href="/skaut/skaut-google-drive-gallery/1"
    >
      Add hint to set videos to public
    </a>
  </h2>
  <p
    class="emotion-2"
  >
    <a
      href="/skaut/skaut-google-drive-gallery"
      title="Plugin pro WordPress, který ze složek s fotkami na Google Disku dělá galerie na webu."
    >
      WordPress plugin: Galerie obrázků a videí z Google Disku
    </a>
  </p>
  <p
    class="emotion-3"
  >
    <p>
      When editing and selecting a folder with videos, the editor could display a notice that setting videos to "Anyone can view" will speed them up.
    </p>
    

    <p>
      Depends on #792
    </p>
  </p>
  <span
    class="emotion-4"
  >
    wordpress
  </span>
  <span
    class="emotion-5"
  >
    php
  </span>
  <span
    class="emotion-6"
  >
    javascript
  </span>
  <span
    class="emotion-7"
  >
    google
  </span>
</article>
`;

exports[`Issue component should render correctly without tags 1`] = `
.emotion-0 {
  margin: 0 0 16px;
  padding-bottom: 24px;
  border-bottom: 1px solid #29488510;
  max-width: 600px;
}

.emotion-1 {
  color: #294885;
  margin: 0 0 12px;
  font-family: themix;
}

.emotion-2 {
  margin: 0 0 0.6em;
}

.emotion-2 * {
  font-size: 0.8rem;
}

.emotion-3 {
  margin: 0 0 16px;
}

.emotion-3 img {
  max-width: 100%;
}

<article
  class="emotion-0"
>
  <h2
    class="emotion-1"
  >
    <a
      href="/skaut/skaut-google-drive-gallery/1"
    >
      Add hint to set videos to public
    </a>
  </h2>
  <p
    class="emotion-2"
  >
    <a
      href="/skaut/skaut-google-drive-gallery"
      title="Plugin pro WordPress, který ze složek s fotkami na Google Disku dělá galerie na webu."
    >
      WordPress plugin: Galerie obrázků a videí z Google Disku
    </a>
  </p>
  <p
    class="emotion-3"
  >
    <p>
      When editing and selecting a folder with videos, the editor could display a notice that setting videos to "Anyone can view" will speed them up.
    </p>
    

    <p>
      Depends on #792
    </p>
  </p>
</article>
`;
